--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </script>
     <div class="footer-basic">
         <footer>
-            <p class="copyright">Made by <a href="https://www.linkedin.com/in/aarohi-pisolkar-b72705273" target="_blank">Aarohi Pisolkar</a></p>
+            <p class="copyright">Made by <a href="" target="_blank">Aarohi Pisolkar</a></p>
         </footer>
     </div>
     
