--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
     </script>
     <div class="footer-basic">
         <footer>
-            <p class="copyright">Made by <a href="" target="_blank">Aarohi Pisolkar</a></p>
+            <p class="copyright">Made by <a href="" target="_blank">ARJOO MANSOORI</a></p>
+            
         </footer>
     </div>
     
